<resources>
    <string name="sample_text">Przykładowy tekst</string>
    <string name="open">Otwórz</string>
    <string name="close">Close</string>
    <string name="date_picker_pick_date">Wybierz datę</string>
    <string name="fragment_login_logo_app_name" translatable="false">Simply Carfleet</string>
    <string name="fragment_login_app_name" translatable="false">Simply Carfleet</string>
    <string name="fragment_login_hint_username">Adres e-mail</string>
    <string name="fragment_login_hint_password">Hasło</string>
    <string name="fragment_login_button_login">Zaloguj się</string>
    <string name="fragment_login_button_forgot_password">Zresetuj hasło</string>
    <string name="fragment_login_button_dont_have_account">Nie mam jeszcze konta, chcę się zarejestrować</string>
    <string name="fragment_register_button_register">Zarejestruj się</string>
    <string name="fragment_register_button_already_have_an_account">Mam już konto, chcę się zalogować</string>
    <string name="fragment_register_hint_repeat_password">Powtórz hasło</string>
    <string name="fragment_forgot_password_title">Zapomniałeś hasła?</string>
    <string name="fragment_forgot_password_secondary_text">Podaj swój adres e-mail</string>
    <string name="fragment_forgot_password_supporting_text">Na podany adres e-mail zostanie wysłany link resetujący hasło.</string>
    <string name="fragment_forgot_password_button_reset_password">Wyślij</string>
    <string name="add_reminder_layout_enter_type_of_reminder">Podaj typ przypomnienia</string>
    <string name="add_reminder_layout_enter_reminder_description">Podaj opis przypomnienia</string>
    <string name="add_reminder_layout_reminder_every">Przypomnienie co każde</string>
    <string name="add_reminder_layout_enter_value_in_distance">Podaj wartość w dystansie</string>
    <string name="add_reminder_layout_enter_value_in_days">Podaj wartość w dniach</string>
    <string name="car_more_info_photo_description">Zdjęcie pojazdu</string>
    <string name="car_more_info_brand">Marka</string>
    <string name="car_more_info_model">Model</string>
    <string name="car_more_info_year_of_production">Rok produkcji</string>
    <string name="car_more_info_fuel_type">Typ paliwa</string>
    <string name="car_more_info_VIN">VIN</string>
    <string name="car_more_info_policy_number">Numer polisy ubezpieczeniowej</string>
    <string name="car_more_info_notes">Notatki</string>
    <string name="expenditure_more_info_icon_description">Ikona wydatku</string>
    <string name="expenditure_more_info_type_of_statistic">Wydatek</string>
    <string name="expenditure_more_info_date_selected">Data</string>
    <string name="expenditure_more_info_last_mileage">Ostatni przebieg</string>
    <string name="expenditure_more_info_expenditure_type">Rodzaj wydatku</string>
    <string name="expenditure_more_info_total_cost">Całkowity koszt wydatku</string>
    <string name="fragment_add_expenditure_receipt_images">Zdjęcia paragonów</string>
    <string name="service_more_info_icon_description">Ikona serwisu</string>
    <string name="service_more_info_type_of_statistic">Serwis</string>
    <string name="service_more_info_date_selected">Data</string>
    <string name="service_more_info_last_mileage">Ostatni przebieg</string>
    <string name="service_more_info_workshop">Warsztat</string>
    <string name="service_more_info_service_type">Rodzaj serwisu</string>
    <string name="service_more_info_total_cost">Całkowity koszt serwisu</string>
    <string name="fragment_add_service_info_receipt_images">Zdjęcia paragonów</string>
    <string name="refueling_more_info_icon_description">Ikona tankowania</string>
    <string name="refueling_more_info_type_of_statistic">Tankowanie</string>
    <string name="refueling_more_info_date_selected">Data</string>
    <string name="refueling_more_info_last_mileage">Ostatni przebieg</string>
    <string name="refueling_more_info_gas_station">Stacja benzynowa</string>
    <string name="refueling_more_info_fuel_amount">Ilość zatankowanego paliwa</string>
    <string name="refueling_more_info_fuel_price">Koszt za jednostkę paliwa</string>
    <string name="refueling_more_info_total_cost">Całkowity koszt tankowania</string>
    <string name="fragment_add_refuel_info_receipt_images">Zdjęcia paragonów</string>
    <string name="note_more_info_icon_description">Ikona notatki</string>
    <string name="note_more_info_type_of_statistic">Notatka</string>
    <string name="note_more_info_date_selected">Data</string>
    <string name="note_more_info_last_mileage">Ostatni przebieg</string>
    <string name="note_more_info_note_description">Treść notatki</string>
    <string name="fragment_add_note_info_receipt_images">Zdjęcia paragonów</string>
    <string name="fragment_add_car_title">Dodaj nowy pojazd</string>
    <string name="fragment_add_car_brand">Podaj markę: </string>
    <string name="fragment_add_car_model">Podaj model:</string>
    <string name="fragment_add_car_year_of_prod">Podaj rok produkcji:</string>
    <string name="fragment_add_car_fuel_type">Podaj typ paliwa:</string>
    <string name="fragment_add_car_vin">Podaj nr VIN:</string>
    <string name="fragment_add_car_policy_number">Podaj numer polisy:</string>
    <string name="fragment_add_car_notes">Wpisz dodatkowe notatki:</string>
    <string name="fragment_add_car_photo_description">Zdjęcie pojazdu</string>
    <string name="fragment_add_car_button_cancel">Anuluj</string>
    <string name="fragment_add_car_button_confirm">Dodaj</string>
    <string name="fragment_add_expenditure_title">Dodaj wydatek</string>
    <string name="fragment_add_expenditure_expenditure_type">Rodzaj wydatku</string>
    <string name="fragment_add_expenditure_expenditure_total_cost">Całkowity koszt wydatku</string>
    <string name="fragment_add_expenditure_car_mileage">Przebieg</string>
    <string name="fragment_add_expenditure_pick_date">Data</string>
    <string name="fragment_add_expenditure_icon_description">Ikona kalendarza</string>
    <string name="fragment_add_expenditure_button_cancel">Anuluj</string>
    <string name="fragment_add_expenditure_button_confirm">Dodaj</string>
    <string name="fragment_add_note_title">Dodaj notatkę</string>
    <string name="fragment_add_note_note_description">Treść notatki</string>
    <string name="fragment_add_note_car_mileage">Przebieg</string>
    <string name="fragment_add_note_pick_date">Data</string>
    <string name="fragment_add_note_icon_description">Ikona kalendarza</string>
    <string name="fragment_add_note_button_cancel">Anuluj</string>
    <string name="fragment_add_note_button_confirm">Dodaj</string>
    <string name="fragment_add_refuel_title">Dodaj tankowanie</string>
    <string name="fragment_add_refuel_fuel_amount">Ilość zatankowanego paliwa</string>
    <string name="fragment_add_refuel_fuel_price">Cena za jednostkę paliwa</string>
    <string name="fragment_add_refuel_total_cost">Całkowity koszt tankowania</string>
    <string name="fragment_add_refuel_car_mileage">Przebieg</string>
    <string name="fragment_add_refuel_gas_station">Stacja benzynowa</string>
    <string name="fragment_add_refuel_pick_date">Data</string>
    <string name="fragment_addrefuel_icon_description">Ikona kalendarza</string>
    <string name="fragment_add_refuel_button_cancel">Anuluj</string>
    <string name="fragment_add_refuel_button_confirm">Dodaj</string>
    <string name="fragment_add_service_title">Dodaj serwis</string>
    <string name="fragment_add_service_service_type">Rodzaj serwisu</string>
    <string name="fragment_add_service_service_total_cost">Całkowity koszt serwisu</string>
    <string name="fragment_add_service_car_mileage">Przebieg</string>
    <string name="fragment_add_service_workshop">Warsztat</string>
    <string name="fragment_add_service_pick_date">Data</string>
    <string name="fragment_add_service_icon_description">Ikona kalendarza</string>
    <string name="fragment_add_service_button_cancel">Anuluj</string>
    <string name="fragment_add_service_button_confirm">Dodaj</string>
    <string name="fragment_cars_photo_description">Zdjęcie pojazdu</string>
    <string name="fragment_cars_card_title">Brak pojazdów!</string>
    <string name="fragment_cars_card_description">Aby dodać pierwszy pojazd kliknij ikonę plusa znajdującą się w prawym górnym rogu ekranu.</string>
    <string name="fragment_home_header">Wpisy</string>
    <string name="fragment_home_tabs_entries">Wpisy</string>
    <string name="fragment_home_tabs_statistics">Statystyki</string>
    <string name="fragment_home_card_title">Brak wpisów!</string>
    <string name="fragment_home_card_description">Aby dodać pierwszy wpis kliknij na pływający przycisk znajdujący się w prawym dolnym rogu ekranu.</string>
    <string name="fragment_home_no_cars_card_title">Brak pojazdów!</string>
    <string name="fragment_home_no_cars_card_description">Aby mieć możliwość dodawania statystyk musisz najpierw dodać pojazd przechodząc za pomocą menu bocznego do ekranu "Pojazdy". Po dodaniu pojazdu będzie możliwośc dodania notatek dotyczących pojazdu, a także wpisów odnośnie wydatków, tankowań oraz serwisów.</string>
    <string name="fragment_reminders_button_image">Ikona dodania przypomnienia</string>
    <string name="fragment_reminders_header">Przypomnienia</string>
    <string name="fragment_reminders_card_title">Brak przypomnień!</string>
    <string name="fragment_reminders_card_description">Aby dodać pierwsze przypomnienie kliknij na pływający przycisk znajdujący się w prawym dolnym rogu ekranu.</string>
    <string name="fragment_reminders_no_cars_card_title">Brak pojazdów!</string>
    <string name="fragment_reminders_no_cars_card_description">Aby mieć możliwość dodawania przypomnień musisz najpierw dodać pojazd przechodząc za pomocą menu bocznego do ekranu "Pojazdy". Po dodaniu pojazdu będzie możliwość dodania przypomnień.</string>
    <string name="fragment_reminders_icon_description">Ikona kalendarza</string>
    <string name="home_data_filtering_date_range">Zakres czasu</string>
    <string name="last_week_filtering_date">Ostatni tydzień</string>
    <string name="last_month_filtering_date">Ostatni miesiąc</string>
    <string name="last_year_filtering_date">Ostatni rok</string>
    <string name="nav_header_logged_in_user">Zalogowany użytkownik</string>
    <string name="modify_car_layout_brand">Marka</string>
    <string name="modify_car_layout_model">Model</string>
    <string name="modify_car_layout_year_of_production">Rok produkcji</string>
    <string name="modify_car_layout_fuel_type">Typ paliwa</string>
    <string name="nav_menu_home_screen">Ekran główny</string>
    <string name="nav_menu_cars">Pojazdy</string>
    <string name="nav_menu_reminders">Przypomnienia</string>
    <string name="nav_menu_reports">Raporty</string>
    <string name="nav_menu_help">Pomoc</string>
    <string name="nav_menu_settings">Ustawienia</string>
    <string name="nav_menu_logout">Wyloguj się</string>
    <string name="fragment_help_logo_description">Logo aplikacji</string>
    <string name="fragment_help_about_app">O aplikacji</string>
    <string name="fragment_help_app_description">Simply Carfleet to aplikacja mobilna wspomagająca zarządzanie flotą pojazdów. Aplikacja ma usprawnić bieżące monitorowanie wydatków na poszczególne pojazdy oraz tworzyć raporty, które moga pomóc w optymalizacji kosztów utrzymania pojazdów"</string>
    <string name="fragment_help_contact">Kontakt z deweloperem</string>
    <string name="fragment_help_contact_mail" translatable="false">simplycarfleet@gmail.com</string>
    <string name="fragment_help_button_send_ticket">Wyślij zgłoszenie</string>
    <string name="fragment_help_app_name" translatable="false">Simply Carfleet</string>
    <string name="fragment_help_developer_info" translatable="false">&#169; Adrian Bartoszek, Jakub Kornyluk 2021</string>
    <string name="fragment_help_all_rights_reserved">Wszelkie prawa zastrzeżone</string>
</resources>