<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:checked="true"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/nav_menu_home_screen" />
        <item
            android:id="@+id/nav_cars"
            android:icon="@drawable/ic_baseline_directions_car_24"
            android:title="@string/nav_menu_cars" />
        <item
            android:id="@+id/nav_reminders"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:title="@string/nav_menu_reminders" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_baseline_insert_chart_24"
            android:title="@string/nav_menu_reports" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/nav_menu_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_baseline_help_center_24"
            android:title="@string/nav_menu_help" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/nav_menu_logout" />
    </group>
</menu>